# zesh

./: .gitignore  CMakeLists.txt  Makefile  README.md  core.11483  funcs.sh  improvements.txt  test.sh  test_final.sh  test_parite.sh  zesh_debug  zesh_new
.github/workflows/: ci.yml
fuzz/: Makefile  README.md  fuzz_common.h  fuzz_expand  fuzz_expand.c  fuzz_lexer  fuzz_lexer.c  fuzz_lexer_sp  fuzz_parser  fuzz_parser.c  fuzz_script  fuzz_script.c  fuzz_stubs.c  lexer_crashes.txt  make_corpus.sh  parser_crashes.txt  run_fuzz.sh  triage_crashes.sh
fuzz/corpus/expand/: 001.sh  002.sh  002.txt  003.sh  003.txt  004.sh  004.txt  005.sh  005.txt  006.txt  007.sh  007.txt  008.txt  009.sh  009.txt  010.sh  010.txt
fuzz/corpus/lexer/: 005.sh  005_subshell.sh  008_special.sh  011_ansi.sh  012_coproc.sh  015_case.sh  018_redir.sh
fuzz/corpus/parser/: 003.sh  004_vars.sh  005.sh  006_heredoc.sh  007.sh  010_quotes.sh  013_while.sh  016_func.sh  017_array.sh  019_trap.sh
fuzz/corpus/script/: 002.sh  002_pipeline.sh  003.sh  003_if.sh  004_while.sh  006_case.sh  007_func.sh  008_subshell.sh  009_redir.sh  010_heredoc.sh  011_arith.sh  012_expand.sh  013_array.sh  014_trap.sh  015_getopts.sh  016_pipe_while.sh  017_nested.sh  018_set_e.sh  019_complex.sh  020_logic.sh
fuzz/findings/rust/differential/default/: cmdline  fuzz_bitmap  fuzzer_setup  fuzzer_stats  plot_data  target_hash
fuzz/findings/rust/differential/default/queue/: id:000005,time:0,execs:0,orig:006.sh  id:000007,time:0,execs:0,orig:008.sh  id:000009,src:000000,time:2,execs:76,op:colorization,pos:0,+cov  id:000010,src:000000,time:2,execs:84,op:colorization,pos:0  id:000011,src:000000,time:130,execs:111,op:havoc,rep:5,+cov  id:000012,src:000000,time:130,execs:120,op:havoc,rep:2,+cov  id:000013,src:000000,time:131,execs:134,op:havoc,rep:7,+cov  id:000014,src:000000,time:131,execs:143,op:havoc,rep:14,+cov  id:000015,src:000000,time:131,execs:158,op:havoc,rep:2  id:000016,src:000000,time:131,execs:166,op:havoc,rep:1,+cov  id:000017,src:000000,time:132,execs:174,op:havoc,rep:2,+cov  (+3830 more)
fuzz/findings/rust/expand/default/: cmdline  fuzz_bitmap  fuzzer_setup  fuzzer_stats  plot_data  target_hash
fuzz/findings/rust/lexer/default/: cmdline  fuzz_bitmap  fuzzer_setup  fuzzer_stats  plot_data  target_hash
fuzz/findings/rust/parser/default/: cmdline  fuzzer_setup  fuzzer_stats  plot_data  target_hash
fuzz/findings/rust/script/default/: cmdline  fuzz_bitmap  fuzzer_setup  fuzzer_stats  plot_data  target_hash
include/: alias.h  completions.h  config.h  highlight.h  input.h  jobs.h  plugin.h  rc.h  security.h  shell.h  signals.h  zesh_rs.h
plugins/: Makefile  git.c
src/: alias.c  builtins.c  completions.c  config.c  executor.c  expand.c  highlight.c  history.c  input.c  jobs.c  lexer.c  main.c  parser.c  plugin.c  rc.c  security.c  signals.c
zesh/: Cargo.toml
zesh-rs/: Cargo.toml  core.207784  core.207792  core.207799  core.207805  core.207809  core.207813  core.207821  core.207824  core.207828  core.207833  core.207837  core.207843  test_fixes.rs
zesh-rs/fuzz/: Cargo.toml  afl_stubs.c  build.rs
zesh-rs/fuzz/afl_out_lexer/default/: cmdline
zesh-rs/src/: alias.rs  config.rs  expand.rs  ffi.rs  lexer.rs  lib.rs  main.rs  parser.rs  rc.rs  security.rs
zesh-rs/src/shell/: completions.rs  config.rs  executor.rs  expand.rs  highlight.rs  history.rs  input.rs  lexer.rs  mod.rs  parser.rs  signals.rs  types.rs  vars.rs
zesh/src/: lib.rs  main.rs
zesh/src/shell/: builtins.rs  executor.rs  highlight.rs  history.rs  input.rs  jobs.rs  lexer.rs  parser.rs  rc.rs  vars.rs
(+18003 files in other folders)
