[package]
name    = "zesh-rs"
version = "0.1.0"
edition = "2021"
description = "Rust reimplementation of zesh's list parser and parameter expansion, linked into the C shell as a static library."

[workspace]
members = [".", "fuzz"]

[lib]
name       = "zesh_rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "zesh_rs"
path = "src/main.rs"

[dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["signal","process","ioctl","term","fs","resource","user","hostname"] }
bitflags = "2"
glob = "0.3"
afl = { version = "0.15", optional = true }

[features]
# When enabled, non-deterministic expansions ($$, etc.) use fixed values so
# fuzzing is reproducible — mirrors the C side's -DFUZZ_MODE.
fuzz = []

[profile.release]
opt-level = 3
lto       = true
panic     = "abort"   # critical: never unwind across the FFI boundary
