[package]
name    = "zesh-rs"
version = "0.1.0"
edition = "2021"
description = "Zesh — a modern shell written in pure Rust."

[workspace]
members = [".", "fuzz"]

[[bin]]
name = "zesh_rs"
path = "src/main.rs"

[dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["signal","process","ioctl","term","fs","resource","user","hostname"] }
bitflags = "2"
glob = "0.3"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
afl = { version = "0.15", optional = true }

[features]
# When enabled, non-deterministic expansions ($$, etc.) use fixed values so
# fuzzing is reproducible.
fuzz = []

[profile.release]
opt-level = 3
lto       = true
panic     = "abort"
