[package]
name    = "zesh-fuzz"
version = "0.1.0"
edition = "2021"

[dependencies]
zesh-rs = { path = "..", features = ["fuzz"] }
afl     = "0.15"

[build-dependencies]
cc = "1"

[[bin]]
name = "fuzz_lexer"
path = "src/bin/fuzz_lexer.rs"

[[bin]]
name = "fuzz_parser"
path = "src/bin/fuzz_parser.rs"

[[bin]]
name = "fuzz_expand"
path = "src/bin/fuzz_expand.rs"

[[bin]]
name = "fuzz_script"
path = "src/bin/fuzz_script.rs"

[[bin]]
name = "fuzz_differential"
path = "src/bin/fuzz_differential.rs"

[profile.release]
opt-level = 3
panic     = "abort"
